2014-04-18  Roland Clobus <rclobus@rclobus.nl>
	* client/ai/genetic.c: Replaced sleep(1) by ai_wait(). This fixes the
	Windows build.

2014-04-12  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/gui.c, client/gtk/legend.c: Fixed the sizing of the legend
	tab page in 4:3 mode, which could hide the tabs.

2014-04-09  Rodrigo Espiga Gómez <rodrigoespiga@hotmail.com>
	* client/ai/ai.h, client/ai/ai.c, client/ai/genetic.c,
	client/ai/genetic_core.c: Accept a chromosome file from the command
	line. Updated the default chromosome.
	
2014-04-06  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/common_gtk.c: Ported the button on the notebook page to
	GTK+3.

2014-03-11  Rodrigo Espiga Gómez <rodrigoespiga@hotmail.com>
	* client/ai/genetic.c: Corrected some bugs that made it, under certain
	circumstances, try to get resources not available in the bank.

2014-03-08  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/resource-view.gob: Replaced deprecated function.
	* common/gtk/guimap.c: Simplified event arguments.
	* client/gtk/gui.c, common/gtk/common_gtk.c, common/gtk/common_gtk.h,
	common/gtk/guimap.c, common/gtk/guimap.h, editor/gtk/editor.c: The
	GuiMap widget maintains the last known mouse pointer position.

2014-03-07  Rodrigo Espiga Gómez <rodrigoespiga@hotmail.com>
	* client/ai/genetic.c, client/ai/genetic_core.c: Genetic Player, now
	it values ports and depreciates strategies that let it ending the turn
	with too many resources.

2014-02-25  Roland Clobus <rclobus@rclobus.nl>
	* Makefile.am, client/gtk/chat.c, client/gtk/connect.c,
	client/gtk/develop.c, client/gtk/discard.c, client/gtk/frontend.c,
	client/gtk/gameover.c, client/gtk/gold.c, client/gtk/gui.c,
	client/gtk/histogram.c, client/gtk/identity.c, client/gtk/legend.c,
	client/gtk/monopoly.c, client/gtk/name.c, client/gtk/player.c,
	client/gtk/plenty.c, client/gtk/quote-view.c, client/gtk/quote.c,
	client/gtk/resource-table.c, client/gtk/resource-view.gob,